--- a/ProyectoWeb24AM/Views/Shared/_LayoutDashboard.cshtml
+++ b/ProyectoWeb24AM/Views/Shared/_LayoutDashboard.cshtml
@@ -12,6 +12,7 @@
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="~/ProyectoWeb24AM.styles.css" asp-append-version="true" />
     <script src="https://kit.fontawesome.com/72b6853d86.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 <body>
     <div id="app">
@@ -48,7 +49,7 @@
                         </li>
 
                         <li>
-                        <a href="@Url.Action("AbrirEnNuevaVentana", "Libro")">
+                        <a href="@Url.Action("Libro", "Libro")">
                                 <span class="icon">
                                     <ion-icon name="chatbubble-outline"></ion-icon>
                                 </span>
