--- a/ProyectoWeb24AM/Views/Articulo/NewArticulo.cshtml
+++ b/ProyectoWeb24AM/Views/Articulo/NewArticulo.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Nuevo Artículo</h1>
 
-<form asp-action="Crear" asp-controller="Articulo" method="post">
+<form asp-action="Crear" asp-controller="Articulo" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label asp-for="Nombre"></label>
         <input asp-for="Nombre" class="form-control" />
@@ -17,6 +17,10 @@
         <label asp-for="Descripcion"></label>
         <input asp-for="Descripcion" class="form-control" />
         <span asp-validation-for="Descripcion" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Img" class="control-label"></label>
+        <input asp-for="Img" class="form-control" type="file" name="Img" accept="image/*" required />
     </div>
 
     <div class="form-group">
