--- a/ProyectoWeb24AM/Views/Shared/_LayoutDashboard.cshtml
+++ b/ProyectoWeb24AM/Views/Shared/_LayoutDashboard.cshtml
@@ -76,7 +76,7 @@
                         </li>
 
                         <li>
-                            <a href="#">
+                        <a href="@Url.Action("Index", "Promocion")">
                                 <span class="icon">
                                     <ion-icon name="lock-closed-outline"></ion-icon>
                                 </span>
