--- a/ProyectoWeb24AM/Views/Promocion/Editar.cshtml
+++ b/ProyectoWeb24AM/Views/Promocion/Editar.cshtml
@@ -4,31 +4,65 @@
     Layout = "_LayoutDashboard";
 }
 
-<h1>Nueva Promoción</h1>
+<div class="container-fluid">
+<div class="col-sm-8">
+    <div class="card border">
+        <div class="card-header bg-dark">
+            <h1 class="text-white"><strong>Editar usuario</strong></h1>
 
-<form asp-action="Editar" asp-controller="Promocion" method="post">
-    <div class="form-group">
-        <label asp-for="Descuento">Descuento (%)</label>
-        <input asp-for="Descuento" class="form-control" />
-        <span asp-validation-for="Descuento" class="text-danger"></span>
+        </div>
+
+        <div class="card-body">
+
+            <form asp-action="Editar" method="post">
+
+
+                @*Id de la promocion oculto*@
+
+
+                <input type="hidden" asp-for="PKPromocion" />
+
+                <div class="form-group">
+                    <label asp-for="Descuento" class="control-label"></label>
+                    <input asp-for="Descuento" class="form-control" placeholder="Ingresa el nombre" required />
+
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="FechaInicio">Fecha de Inicio</label>
+                    <input asp-for="FechaInicio" type="date" class="form-control" />
+
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="FechaFin">Fecha de Fin</label>
+                    <input asp-for="FechaFin" type="date" class="form-control" />
+                 
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label">Articulo</label>
+                    <select asp-for="FkArticulo" asp-items="ViewBag.Articulo" class="select2-placeholder-multiple form-control">
+                        <option value="">-- Selecciona --</option>
+                    </select>
+                </div>
+
+                <div class="form-group mt-3">
+                    <button type="submit" class="btn btn-secondary d-block mx-auto"><i class="bi bi-person-fill"></i> Guardar</button>
+                </div>
+
+            </form>
+
+            <a asp-controller="Promocion" asp-action="Index">Volver</a>
+
+
+        </div>
+
+
     </div>
 
-    <div class="form-group">
-        <label asp-for="FechaInicio">Fecha de Inicio</label>
-        <input asp-for="FechaInicio" type="date" class="form-control" />
-        <span asp-validation-for="FechaInicio" class="text-danger"></span>
-    </div>
 
-    <div class="form-group">
-        <label asp-for="FechaFin">Fecha de Fin</label>
-        <input asp-for="FechaFin" type="date" class="form-control" />
-        <span asp-validation-for="FechaFin" class="text-danger"></span>
-    </div>
+</div>
 
-    <div class="form-group">
-        <label asp-for="FkArticulo" class="control-label"></label>
-        <input asp-for="FkArticulo" class="form-control" placeholder="Ingresa el rol" required />
 
-    </div>
-    <button type="submit" class="btn btn-primary">Guardar</button>
-</form>
+</div>
