--- a/ProyectoWeb24AM/Views/Promocion/Crear.cshtml
+++ b/ProyectoWeb24AM/Views/Promocion/Crear.cshtml
@@ -4,25 +4,39 @@
     Layout = "_LayoutDashboard";
 }
 
-<h1>Nueva Promoción</h1>
 
-<form asp-action="Crear" asp-controller="Promocion" method="post">
+
+
+<div class="container-fluid">
+    <div class="col-sm-8">
+        <div class="card border">
+            <div class="card-header bg-dark">
+                <h1 class="text-white"><strong>Crear Promocion</strong></h1>
+
+            </div>
+
+<form asp-action="Crear" asp-controller="Promocion" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label asp-for="Descuento">Descuento (%)</label>
         <input asp-for="Descuento" class="form-control" />
         <span asp-validation-for="Descuento" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
-        <label asp-for="FechaInicio">Fecha de Inicio</label>
-        <input asp-for="FechaInicio" type="date" class="form-control" />
-        <span asp-validation-for="FechaInicio" class="text-danger"></span>
-    </div>
+               <div class="form-group">
+                    <label asp-for="FechaInicio">Fecha y Hora de Inicio</label>
+                    <input asp-for="FechaInicio" type="datetime-local" class="form-control" />
+                    <span asp-validation-for="FechaInicio" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="FechaFin">Fecha y Hora de Fin</label>
+                    <input asp-for="FechaFin" type="datetime-local" class="form-control" />
+                    <span asp-validation-for="FechaFin" class="text-danger"></span>
+                </div>
 
     <div class="form-group">
-        <label asp-for="FechaFin">Fecha de Fin</label>
-        <input asp-for="FechaFin" type="date" class="form-control" />
-        <span asp-validation-for="FechaFin" class="text-danger"></span>
+        <label asp-for="Img" class="control-label">Imagen de Promoción</label>
+        <input asp-for="Img" class="form-control" type="file" name="Img" accept="image/*" required />
     </div>
 
     <div class="form-group">
